progress and methodologies updated

--- a/data/bibliography/bibli.bib
+++ b/data/bibliography/bibli.bib
@@ -1,12 +1,49 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shangqi at 2017-11-14 22:24:34 +1100 
+%% Created for Shangqi at 2017-11-15 19:51:20 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{apache2017hbase,
+	Author = {Apache},
+	Date-Added = {2017-11-15 08:49:54 +0000},
+	Date-Modified = {2017-11-15 08:51:20 +0000},
+	Howpublished = {\\ \url{https://hbase.apache.org} [online]},
+	Title = {Apache HBase -- Apache HBase{\texttrademark} Home},
+	Year = {2017}}
+
+@misc{apache2017spark,
+	Author = {Apache},
+	Date-Added = {2017-11-15 08:47:53 +0000},
+	Date-Modified = {2017-11-15 08:49:28 +0000},
+	Howpublished = {\\ \url{https://spark.apache.org} [online]},
+	Title = {{Apache Spark{\texttrademark} - Lightning-Fast Cluster Computing}},
+	Year = {2017}}
+
+@article{boneh2007conjunctive,
+	Author = {Boneh, Dan and Waters, Brent},
+	Date-Added = {2017-11-15 04:34:12 +0000},
+	Date-Modified = {2017-11-15 04:34:18 +0000},
+	Journal = {Theory of cryptography},
+	Pages = {535--554},
+	Publisher = {Springer},
+	Title = {{Conjunctive, Subset, and Range Queries on Encrypted Data}},
+	Year = {2007}}
+
+@inproceedings{boneh2004public,
+	Author = {Boneh, Dan and Di Crescenzo, Giovanni and Ostrovsky, Rafail and Persiano, Giuseppe},
+	Booktitle = {Eurocrypt},
+	Date-Added = {2017-11-15 04:33:02 +0000},
+	Date-Modified = {2017-11-15 04:33:08 +0000},
+	Organization = {Springer},
+	Pages = {506--522},
+	Title = {{Public Key Encryption with Keyword Search}},
+	Volume = {3027},
+	Year = {2004}}
 
 @inproceedings{de2012hummingbird,
 	Author = {De Cristofaro, Emiliano and Soriente, Claudio and Tsudik, Gene and Williams, Andrew},
@@ -183,25 +220,6 @@
 	Pages = {337--348},
 	Title = {{Cachet: A Decentralized Architecture for Privacy Preserving Social Networking with Caching}},
 	Year = {2012}}
-
-@inproceedings{feldman2012social,
-	Author = {Feldman, Ariel J and Blankstein, Aaron and Freedman, Michael J and Felten, Edward W},
-	Booktitle = {USENIX Security Symposium},
-	Date-Added = {2017-11-10 01:04:08 +0000},
-	Date-Modified = {2017-11-10 01:04:30 +0000},
-	Pages = {647--662},
-	Title = {{Social Networking with Frientegrity: Privacy and Integrity with an Untrusted Provider.}},
-	Year = {2012}}
-
-@inproceedings{backes2011security,
-	Author = {Backes, Michael and Maffei, Matteo and Pecina, Kim},
-	Booktitle = {NDSS},
-	Date-Added = {2017-11-10 00:43:25 +0000},
-	Date-Modified = {2017-11-10 00:43:41 +0000},
-	Pages = {35--51},
-	Title = {{A Security API for Distributed Social Networks}},
-	Volume = {11},
-	Year = {2011}}
 
 @article{mcpherson2001birds,
 	Author = {McPherson, Miller and Smith-Lovin, Lynn and Cook, James M},
