--- a/data/construction.tex
+++ b/data/construction.tex
@@ -1,1 +1,9 @@
-\chapter{Construction}
+\chapter{Model Construction}
+This chapter introduces a model based on the underlying Social Graph of Graph Search, the searchable encryption approaches and secure index for this model will be further discussed based on this model.
+
+\section{Social Graph and Modeling}
+As mentioned in \cite{curtiss2013unicorn}, Social graph is a directed graph consists of nodes which are describing the entities (users and user-generated contents like photos, pages) and edges as the relationships in social network. Social graph is a huge graph which contains many billions of nodes, however it is also a sparse graph, because most of the nodes only have no more than a thousand links between other nodes, while only a tiny fraction of nodes can attract tens of millions of links from others. As a result, in Unicorn \cite{curtiss2013unicorn}, the social graph can be represented by adjacent lists, and it stores as key-value pairs for query. 
+
+In addition, there are various relationships in a social graph, the most common relationship is ``friends'', and a typical user may have up to a hundred friends. The interaction between nodes generates more relationships: For example, users can give a positive feedback to a restaurant by using ``likes'' on their page, it creates the ``likes'' relationship between user and page. In conclusion, the edges in social graph are labeled like a weighted graph, but a descriptor of relationship is used instead of a numeric weight. The relation label on edge can help to further reduce the size of adjacent lists. Moreover, the adjacent lists can be indexed not only by the node identifier but also the relationship type between its neighbours, such adjacent lists enable the content search in user's social network.
+
+Formally, social graph is a edge-labeled and directed graph $G = (V, E)$, where $V = \{v_1, v_2, ..., v_n\}$ and $E = \{e_1, e_2, ..., e_m\}$, the total number of nodes is $n = |V|$, and the number of edges is $m = |E|$. There are several relationships $R$ associated with edges in social graph, all edges in $G$ can be represented as a triad $e = (v_e, v_i, r)$ which consists of its egress, ingress nodes ($v_e$ and $v_i$) plus a relationship $r\in R$ as its label. After introducing the notation of graph, the database based on it can be presented as follows: A database of social graph $DB = (ind_c, V_c)_{c=0}^{d}$ is an adjacent lists indexed by $ind = (v_e, r)$ which consists of egress nodes $v_e$ and a relationship $r$, the size of the database is proportional to the number of nodes $d \propto n$. A query takes an index $ind_c$ as input and returns a node list $V_c \subseteq V$ subjects to the conditions $\{v\in V_c | \exists e\in E \land e= (v_e, v, r)\}$.The complexity of such a query can be considered as a constant because $DB$ is based on adjacent lists.
