--- a/data/literature.tex
+++ b/data/literature.tex
@@ -1,9 +1,9 @@
 \chapter{Literature Review}
 
 \section{Privacy Preserving Scheme for OSN}
-Numerous works have proposed to preserve the sensitive data privacy in OSN, and two strategies are mainly applied in these works: Data Decentralisation and Cryptography
+Numerous works have proposed to preserve the sensitive data privacy in OSN, and two strategies are mainly applied in these works: Data Decentralisation and Cryptography.
 
-\subsection{Data Decentralised}
+\subsection{Data Decentralisation}
 Decentralised solutions attempt to provide social services through a collection of independent nodes and users can control their data in a flexible way:
 
 {\bf Decentralised OSN in Peer-to-Peer overlays:} PeerSoN \cite{buchegger2009peerson} and Safebook \cite{cutillo2009safebook} build a decentralised social network in Peer-to-Peer (P2P) overlays. Users can store their data in their local device and on the devices of their trusted friends, they consist of two parts: a distributed hash table (DHT) is used provide lookup service to find users and the data they store; and the P2P network offers direct data exchange between users' devices. In these social network, users are granted full privilege to control their data as well as the communication channel over P2P network: they can choose to either establish communication via their real-life trust \cite{cutillo2009safebook}, or the encrypted channel \cite{buchegger2009peerson}.
@@ -23,34 +23,41 @@ Cryptographic solutions protect the sensitive data via encryption, these solutio
  
 Above cryptographic solutions protect users' privacy generally following two steps:
 \begin{enumerate}
+\setlength{\itemsep}{0pt}
 \item Encrypt data and put it into some public accessible storages.
 \item Authorised users use their key to access, decrypt and use it.
 \end{enumerate}
 However, this procedure infers the dilemma when we want to integrate OSN services with the schemes: Most of the OSN services are deployed in server side, if the data in server side is encrypted, it can't be used to support the OSN services.
 
 \section{Graph Search}
-Graph Search \cite{facebook2013graph} is a typical OSN service to enrich the users' experience of using OSN. Nonetheless, it significantly improves users' search ability over user-generated data in OSN. To reach this goal, Facebook conducted a research about the social graph based on the large amount of the users' data they possessed, and they concluded that although there are billions of nodes representing the entities (e.g. users and user-generated contents like photos, pages) in social graph, the graph is very sparse because a typical node only have less than a thousand edges describing relations (e.g. friends, likes, tags) between nodes. Intuitively, it is better to represent the graph as a set of adjacency lists of users' id, and an inverted index it by edges \cite{curtiss2013unicorn}. Hence, Graph Search service is built upon the backend inverted index service for edges, and achieve a very low query delay (11 ms in average for finishing a query with 6 million results) for querying the entities such as friends, places, pages, etc.. Furthermore, Graph Search allows more complex queries such as graph traversal to find entities which are more than one edge away from source and it only takes 2000 ms at most for a 100 thousand results query. 
+Graph Search \cite{facebook2013graph} is a typical OSN service to enrich the users' experience of using OSN. Nonetheless, it significantly improves users' search ability over user-generated data in OSN. To reach this goal, Facebook conducted a research about the social graph based on the large amount of the users' data they possessed, and they concluded that although there are billions of nodes representing the entities (e.g. users and user-generated contents like photos, pages) in social graph, the graph is very sparse because a typical node only have less than a thousand edges describing relations (e.g. friends, likes, tags) between nodes. Intuitively, it is better to represent the graph as a set of adjacency lists of users' id, and an index it by edges \cite{curtiss2013unicorn}. Hence, Graph Search service is built upon the backend index service for edges, and achieve a very low query delay (11 ms in average for finishing a query with 6 million results) for querying the entities such as friends, places, pages, etc.. Furthermore, Graph Search allows more complex queries such as graph traversal to find entities which are more than one edge away from source and it only takes 2000 ms at most for a 100 thousand results query. 
 
-Graph Search highly depends on users' data especially their relations to build its inverted index system. It is obvious that it can not be deployed in decentralised system as the relations are distributed in different network. Prior cryptographic solutions also have met the same dilemma that the system can not build inverted index to support Graph Search with encrypted data. To compatible with Graph Search, searchable encryption is introduced to guarantee the usability of Graph Search service by using cryptographic encrypted data.
+Graph Search highly depends on users' data especially their relations to build its index system. It is obvious that it can not be deployed in decentralised system as the relations are distributed in different network. Prior cryptographic solutions also have met the same dilemma that the system can not build index to support Graph Search with encrypted data. 
 
 \section{Searchable Encryption}
-Graph Search makes use of users' data storing on their server to generate its inverted indexes, Searchable Symmetric Encryption (SSE) can offer a potential better solution for privacy issues in this data outsourcing case. 
+Graph Search makes use of users' sensitive data storing on their server to generate its indexes, Searchable Encryption (SE) enables the ability to search over encrypted data, so it can offer a potential better solution for privacy issue when users' sensitive data are used for searching in outsourced cloud.
+
+\subsection{Searchable Symmetric Encryption}
+Searchable Symmetric Encryption (SSE) is  the most well-studied category of searchable encryption, most of the state-of-art SSE schemes provide secure index to guarantee its query efficiency, and have a sounded security definition.
 
 {\bf SSE with Index:} The first SSE scheme is proposed by Song et al. \cite{song2000practical}, but his construction doesn't have an index to accelerate keyword search. However, index based SSE protocols have been proposed to support secure index, each more efficient than its predecessor: The first secure encrypted index was proposed in \cite{goh2003secure}, based on form of forward index, storing for each document a Bloom filter containing all the document's keywords. This allows a single document to be searched in a constant time but requires each document to be checked in turn which gains a search complexity proportional to the number of documents.
 
 Curtmola et al. \cite{curtmola2011searchable} are the first to propose to use inverted-index data structure, storing in a hash table for each keyword, the encrypted IDs of the documents that contain it (while hiding the number of documents matching each keyword), resulting in complexity proportional to the number of matching results, even for searching the whole document collection. However, \cite{curtmola2011searchable} does not support multiple keyword conjunctive queries efficiently; it has complexity proportional to the number of documents matching the most frequent queried keyword. Later, \cite{cash2013highly} presented the OXT protocol, extending \cite{curtmola2011searchable} by adding a `Cross-Tag Set' (XSet) data structure, which lists hashed pairs of keywords and IDs of documents containing them, and reducing search complexity to be proportional to the number of results matching the least frequent queried keyword.
 
-{\bf Security Definition and Leakage of SSE:} The studies of SSE security definition started from \cite{goh2003secure}, their definition can make sure that adversaries can not deduct document's content from its index, but it doesn't consider the security of search tokens (trapdoors for searching) However, Curtmola et al. \cite{curtmola2011searchable} pointed out that the security of indexes and the security of trapdoors are inherently linked. In his definition, a SSE is secure if it reveals any information about the documents and the indexes besides the outcome and the pattern of the searches. Chase and Kamara \cite{chase2010structured} extended their definition to more general structured encryption, as SSE is only a special case of structured encryption.
+{\bf Security Definition and Leakage of SSE:} The studies of SSE security definition started from \cite{goh2003secure}, their definition can make sure that adversaries can not deduct document's content from its index, but it doesn't consider the security of search tokens (trapdoors for searching) However, Curtmola et al. \cite{curtmola2011searchable} pointed out that the security of indexes and the security of trapdoors are inherently linked. In his definition, a SSE is secure if it reveals any information about the documents and the indexes besides the outcome and the pattern of the searches. Chase and Kamara \cite{chase2010structured} extended their definition to more general structured encryption, as SSE is only a special case of structured encryption search.
 
 Oblivious RAM (ORAM) allows SSE with no leakage \cite{goldreich1996software}. However, it requires communication rounds and search complexity poly-logarithmic in the database size.To balance the efficiency and security of SSE, almost all of the practical schemes leak information about documents based on current security definition.
 
-\section{Searchable Encryption on Graph}
-The researches about Searchable Graph Encryption are very limited: The notion of Graph Encryption was introduced in \cite{chase2010structured}. In \cite{chase2010structured}, several construction were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph.
+\subsection{Public Key Searchable Encryption}
+SE protocols have also been studied extensively in the public key setting. Such protocols allow any user with the public key to insert data but only allow the user with the private key to search. The use of public key cryptography makes the protocols less efficient than SSE, but allows more powerful functionality and/or better security properties. The first such protocol was proposed by \cite{boneh2004public} as a generalisation of anonymous Identity-Based Encryption (IBE), and supporting equality queries. It was significantly further generalised in \cite{boneh2007conjunctive} to HVE, applied to conjunctive, subset and range searchable encryption queries. However, public key setting is not suit for Graph Search, because the graph is generated by a sole information source (OSN provider), and the source is untrusted, it is meaningless to let an untrusted party to do encryption.
 
-Meng et al. \cite{meng2015grecs} proposed graph encryption schemes that support shortest distance query on graph encryption. Their construction is based on distance oracle instead of Dijkstra's algorithm so their algorithm can only get an approximation of shortest distance but enabling them to search on a large-scale graph.
+\subsection{Searchable Encryption on Graph}
+The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited: In \cite{chase2010structured}, several constructions were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph.
+
+Meng et al. \cite{meng2015grecs} proposed graph encryption schemes that support shortest distance query on graph encryption. Their construction is based on distance oracle instead of Dijkstra's algorithm so their algorithm can only get an approximation of shortest distance but enabling them to search efficiently on a large-scale graph.
 
 \section{Field of Research}
-As a conclusion of literature review, The privacy issue in OSN and its solutions are studied for many years, but none of them fit the context of Graph Search due to its searchable requirement. Since the lack of work about Searchable Encryption on Graph, this research will try to apply the concept of SSE on Graph Search. The new privacy preserving scheme will be designed on the basis of Searchable Graph Encryption, and its performance of security will be further investigated as well as the efficient on large scale graph in distributed environment.
+As a conclusion of literature review, The privacy issue in OSN and its solutions are studied for many years, but none of them fit the context of Graph Search due to its searchable requirement. Since the lack of work about Searchable Encryption on Graph, this research will try to apply the concept of Searchable Encryption to define a Searchable Graph Encryption model. The new privacy preserving scheme for Graph Search will be designed on the basis of above model, and its performance of security will be further investigated as well as the efficient on large scale graph in distributed environment.
 
 
 
