--- a/data/contribution.tex
+++ b/data/contribution.tex
@@ -1,2 +1,2 @@
 \chapter{Contribution to Knowledge}
-This research focuses on the research questions about the privacy issues on Graph Search and solve it by designing a cryptography based privacy preserving scheme for Graph Search with rich search functions. To the best of our knowledge, this is the first work that studies the above issue and provide a feasible solution for it. To enable the search functions over a encrypted graph, a service that supports secure and efficient boolean queries is proposed, and this service will be extended to support necessary functions for Graph Search. A formal security analysis will be given to verify the security performance of this scheme. Once the new scheme is fully defined, the scheme will be deployed in a distributed system, and subjected to intensive evaluation. The evaluation assesses the scheme's efficiency by collecting the queries delays and measuring the overhead from cryptography under a large dataset. The evaluation will play a important role to justify the practicability of the proposed scheme.
+This research focuses on the research questions about the privacy issues on Graph Search and solve it by designing a cryptography based privacy preserving scheme for Graph Search with rich search functions. To facilitate cryptography under the searchable requirement of Graph Search, a new model will be designed to enable efficient search over cryptographic protected graph. Several search functions will be adapted on the basis of the model to extend the search ability on encrypted graph. A formal security analysis will be given to verify the security performance of this new model. This analysis plays an important role to justify that users' privacy in graph can be protected under this model and the search functions which are based on it. Once the new model is fully defined, it will be implemented as a privacy preserving scheme and deployed on large scale graph for evaluation in different query use-case. The evaluation serves as a efficiency test by showing the overhead from cryptography is affordable, additionally, it also shows the practicality of the scheme as it supports rich search functions.
